plugins {
	id 'fabric-loom' version "${loom_version}"
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Create Fabric and its dependencies are published here rather than to Maven Central.
	maven { name = 'Modrinth'; url = 'https://api.modrinth.com/maven' }
	maven { name = 'Terraformers'; url = 'https://maven.terraformersmc.com/' }
}

loom {
	mods {
		"gadzo" {
			sourceSet sourceSets.main
		}
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	// 1.20.1 predates Fabric's move to official mappings, so this branch uses Yarn.
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
}

processResources {
	def props = [
		version           : project.version,
		minecraft_version : project.minecraft_version,
		loader_version    : project.loader_version
	]
	inputs.properties props
	filesMatching('fabric.mod.json') { expand props }
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
	it.options.encoding = 'UTF-8'
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}
